# ai_for_sciences

./: .gitignore  README.md  pyproject.toml
aiforscience/: __init__.py  data.py  display.py  embeddings.py  visualization.py
day1/: tp-ml-doctorants.ipynb  tp-ml-phd-solutions.ipynb  tp-ml-phd.ipynb  tp0.ipynb  tp1.ipynb  tp2.ipynb  tp2_bonus.ipynb  tp3.ipynb
day2/: cpu_gpu_example.py  download_datasets.py  old.ipynb  student_project.csv  todotp1.md  todotp2.md  tp1.ipynb  tp1_part1.ipynb  tp1_part2.ipynb  tp1_part3.ipynb  tp2.ipynb  tp2_bonus.ipynb  tp2_part1.ipynb  tp2_part2.ipynb  tp2_part3.ipynb  tp2_previous.ipynb  tp3.ipynb
day2/data/: maths.csv  molecules_bbbp.csv  proteins_pfam.csv  student_project.csv
day3/: tp1.ipynb  tp1_solutions.ipynb  tp2.ipynb  tp3.ipynb  tp3_bonus.ipynb
