[project]
name = "ai-for-sciences"
version = "0.1.0"
description = ""
authors = [
    {name = "Raphael Cousin",email = "racousin@student.42.fr"}
]
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.8.0,<4.0.0)",
    "numpy (>=1.26.0,<3.0.0)"
]

[project.packages]
include = ["aiforscience"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
