[tool.poetry]
name = "aiforscience"
version = "0.1.0"
description = "Utility package for AI for Sciences Winter School practicals"
authors = ["Raphael Cousin <racousin@student.42.fr>"]
readme = "README.md"
packages = [{include = "aiforscience"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
numpy = ">=1.24.0"
matplotlib = ">=3.7.0"
torch = ">=2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
